--- a/personaforge/templates/methodology.html
+++ b/personaforge/templates/methodology.html
@@ -79,7 +79,9 @@
         <a href="/personaforge/" class="nav__link">Home</a>
         <a href="/personaforge/dashboard" class="nav__link">Dashboard</a>
         <a href="/personaforge/vendors" class="nav__link">Vendors</a>
+        <a href="/personaforge/vendors-intel" class="nav__link">Vendor Intel</a>
         <a href="/personaforge/methodology" class="nav__link nav__link--accent">Methodology</a>
+        <a href="/personaforge/glossary" class="nav__link">Glossary</a>
       </div>
     </nav>
 
